# miniUAV

./: .clang-format  .gitignore  .mxproject  CMakeLists.txt  Makefile  trochilus.ioc
Components/: CMakeLists.txt
Components/FreeRTOS/: CMakeLists.txt  cli.c
Components/Vfs/: CMakeLists.txt  err.h  vfs.h
Components/util/: CMakeLists.txt  ringbuffer.c  util.h
Core/Inc/: stm32f4xx_it.h
Core/Src/: main.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c
Device/: device.cpp  device.h  pwm.h
Drivers/: CMakeLists.txt  drv_serial.c  drv_serial.h
Drivers/STM32F4xx_HAL_Driver/: CMakeLists.txt
Drivers/STM32F4xx_HAL_Driver/Src/: CMakeLists.txt
FreeRTOS/: CMakeLists.txt
FreeRTOS/include/: FreeRTOSConfig.h
Inc/: stm32f4xx_hal_conf.h  stm32f4xx_it.h
Lib/STM32F4xx_HAL_Driver/Inc/: stm32f4xx_hal.h  stm32f4xx_hal_gpio.h  stm32f4xx_hal_uart.h
Lib/STM32F4xx_HAL_Driver/Src/: stm32f4xx_hal_uart.c
Src/: CMakeLists.txt  main.c  main.cpp  stm32f4xx_hal_msp.c  stm32f4xx_it.c
User/: CMakeLists.txt  user_main.c
User/Drivers/: CMakeLists.txt  drv_pwm.h  drv_serial.c  drv_serial.h
Vfs/: CMakeLists.txt  vfs.c  vfs.h
boards/: CMakeLists.txt  board.h
boards/V1/: .mxproject  CMakeLists.txt  Makefile  trochilus.ioc
boards/V1/Core/: CMakeLists.txt
boards/V1/Core/Inc/: stm32f4xx_it.h
boards/V1/Core/Src/: main.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c
boards/V1/Drivers/: CMakeLists.txt
boards/V1/Drivers/STM32F4xx_HAL_Driver/: CMakeLists.txt
boards/V1/Middlewares/: CMakeLists.txt
boards/trochilus/: .cproject  .mxproject  .project  CMakeLists.txt  STM32F411CEUX_FLASH.ld  STM32F411CEUX_RAM.ld  trochilus.ioc
boards/trochilus/Core/: CMakeLists.txt
boards/trochilus/Core/Inc/: stm32f4xx_it.h
boards/trochilus/Core/Src/: gpio.c  main.c  stm32f4xx_it.c  usart.c
boards/trochilus/Drivers/: CMakeLists.txt
boards/trochilus_v1/: board_config.c  board_config.h
cmake/: armgcc.cmake  extensions.cmake  jlink.cmake  platform.cmake  programmer.cmake  stlink.cmake  toolschain.cmake
common/: CMakeLists.txt  osal.h  ringbuffer.h
rtos/FreeRTOS/: CMakeLists.txt
rtos/FreeRTOS/Source/include/: FreeRTOS.h
tools/: STM32F411CEUX_FLASH.ld
user/: CMakeLists.txt  user_main.c
vfs/: CMakeLists.txt  vfs.c  vfs.h
